# stations

./: .gitignore  GLOSSARY.md  METHOD.md  README.md
consumers/: cocli.md  task-agent.md
decisions/: 0001-emission-edges.md  0002-cross-repo-identity.md  0003-schema-evolution.md  0004-done-check-execution.md  0005-packaging-and-reference-implementation.md  0006-strangler-migration-from-cocli.md  0007-disposition-overlapping-cocli-tasks.md  0008-burr-telemetry-and-transform-ergonomics.md
docs/: ADOPTION.md  LINEAGE.md  tasks
python/: README.md  pyproject.toml
python/src/stations/: __init__.py  __main__.py  cli.py  compactor.py  edges.py  engine.py  inspect.py  protocols.py  schema.py  station.py  transform.py
python/src/stations/backends/: __init__.py  claim.py  etag.py  local.py  s3.py
python/tests/: test_backend_claim_contract.py  test_engines.py  test_inspect.py  test_protocols_import.py  test_schema.py  test_transform_decorator.py
spec/: CONCURRENCY.md  PHYSICAL-CONTRACT.md  PROTOCOLS.md
