[project]
name = "stations"
version = "0.1.0"
description = "Reference implementation Protocols for typed file-path stations (queue/WAL/index)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Mark Stouffer" }]
dependencies = [
    "typing-extensions>=4.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
stations = ["py.typed"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["stations"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
